<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/background"
    app:cardElevation="4dp"
    >

    <RelativeLayout
        android:id="@+id/viewBackground"
        android:layout_margin="8dp"
        android:background="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/deleteIcon"
            android:src="@drawable/ic_delete_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/deleteIcon"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/viewForeground"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/cartItemImage"
            android:layout_width="70dp"
            android:layout_height="70dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/cartItemName"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/someFoodItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/cartItemPrice"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:text="@string/someFoodItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/btnCartCount"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="18dp"
            app:textSize="4sp"
            app:backGroundColor="@color/colorAccent"
            app:initialNumber="1"
            app:finalNumber="20"
            />



    </LinearLayout>

</androidx.cardview.widget.CardView>